Update: blog and publication pages

--- a/template/base.html
+++ b/template/base.html
@@ -13,27 +13,14 @@
 </head>
 
 <body>
-    <div class="mil-wrapper" id="top">
+    <div class="mil-wrapper" id="top" >
 
-    <!-- cursor -->
-    <div class="mil-ball">
-        <span class="mil-icon-1">
-          <svg viewBox="0 0 128 128">
-            <path
-              d="M106.1,41.9c-1.2-1.2-3.1-1.2-4.2,0c-1.2,1.2-1.2,3.1,0,4.2L116.8,61H11.2l14.9-14.9c1.2-1.2,1.2-3.1,0-4.2	c-1.2-1.2-3.1-1.2-4.2,0l-20,20c-1.2,1.2-1.2,3.1,0,4.2l20,20c0.6,0.6,1.4,0.9,2.1,0.9s1.5-0.3,2.1-0.9c1.2-1.2,1.2-3.1,0-4.2	L11.2,67h105.5l-14.9,14.9c-1.2,1.2-1.2,3.1,0,4.2c0.6,0.6,1.4,0.9,2.1,0.9s1.5-0.3,2.1-0.9l20-20c1.2-1.2,1.2-3.1,0-4.2L106.1,41.9	z"
-            />
-          </svg>
-        </span>
-        <div class="mil-more-text">More</div>
-        <div class="mil-choose-text">Сhoose</div>
-    </div>
-    <!-- cursor end -->
 
     <!-- preloader -->
     <div class="mil-preloader" id="site-preloader">
   <div class="mil-preloader-animation">
     <div class="mil-pos-abs mil-animation-1">
-      <p class="mil-h3 mil-muted">BENKAM</p>
+      <p class="mil-h3 mil-muted" style="font-weight: 900;">BENKAM</p>
       <p class="mil-h3 mil-muted mil-thin">ALU</p>
       <p class="mil-h3 mil-muted mil-thin">EXTRUSIONS</p>
     </div>
@@ -57,7 +44,7 @@
     <div class="mil-menu-frame">
         <!-- frame clone -->
         <div class="mil-frame-top">
-          <a href="{% url 'home-1' %}" class="mil-logo">BENKAM</a>
+          <a href="{% url 'home-1' %}" class="mil-logo" style="font-weight: 900;">BENKAM</a>
           <div class="mil-menu-btn">
             <span></span>
           </div>
@@ -81,16 +68,9 @@
                       <a href="#.">Services</a>
                       <ul>
                         <li><a href="{% url 'services' %}">Services List</a></li>
-                        <li><a href="{% url 'service' %}">Single service</a></li>
                       </ul>
                     </li>
-                    <li class="mil-has-children">
-                      <a href="#.">News</a>
-                      <ul>
-                        <li><a href="{% url 'blog' %}">Blog List</a></li>
-                        <li><a href="{% url 'publication' %}">Publication</a></li>
-                      </ul>
-                    </li>
+                        <li><a href="{% url 'blog_inner' %}">News</a></li>
                         <li><a href="{% url 'team' %}">Team</a></li>
                         <li><a href="{% url 'contact' %}">Contact</a></li>
                         <li><a href="{% url 'certificates' %}">Certificates</a></li>
@@ -200,7 +180,7 @@
     <!-- frame -->
     <div class="mil-frame">
         <div class="mil-frame-top">
-          <a href="home-1.html" class="mil-logo">BENKAM</a>
+          <a href="home-1.html" class="mil-logo" style="font-weight: 900;">BENKAM</a>
           <div class="mil-menu-btn">
             <span></span>
           </div>
